# flow.yaml

appId: com.rosswaredev.ultrasuite
---
- openLink: ultrasuite://tasks
- runFlow:
    file: ../flows/open.yaml
    when:
      notVisible: Tasks
    
- tapOn:
    id: task-home-link-inbox
- tapOn:
    # id: add-task-button
    point: "50%, 85%"
- inputText: Buy some milk
- tapOn: return
- tapOn:
    point: "50%, 50%"
- assertVisible: Buy some milk
